2008-05-21 Jim Garlick <garlick@llnl.gov>

	* ChangeLog-1.0 : Updated to reflect trunk (1.0.32+)

	* htdocs, scripts/stonith-powerman, man/powerman-devices.7, 
	etc/*.dev, NEWS : Updated [copy from trunk].

	* config/ac_curl.m4, config/ac_readline.m4, config/ac_httppower.m4,
	src/Makefile.am, src/httppower.c : Support httppower [port from trunk].

	* src/parse.lex : Update white space rule [port from trunk].

	* src/parse.y, src/wrappers.c, src/client.c, src/powerman.c,
	src/powermand.c : Include limits.h. [port from trunk].

	* config/ac_forkpty.m4, src/device_pipe.c, src/wrappers.[ch] :
	Provide substitute forkpty() if missing (via Forkpty() wrapper).

	* src/client.c, src/powerman.c, src/powermand.c, Makefile.am :
	Stop defining POWERMAN_VERSION in CFLAGS and use VERSION from config.h.

	* config/ac_wrap.m4, src/parse_util.c, src/client.c : 
	Make tcp_wrappers optional.

	* man/powerman.1.in, config/ac_debug.m4, config/ac_genders.m4,
	config/ac_static_modules.m4, config/ac_powerman_module_dir.m4, 
	configure.ac, src/Makefile.am, src/powerman.c, src/ltdl.[ch], 
	src/powerman_options.h, src/powerman_options_genders.c :
	Drop modules, genders support (temporarily?) to focus on portability.

	* src/device.c, src/debug.[ch], src/wrappers.[ch], src/device_tcp.c :
	Fix compiler warnings.

	* src/wrappers.[ch] : Add Dprintf() wrapper to avoid glibc dependency.
	Add timersub() and timeradd() if undefined.

2006-11-16 Jim Garlick <garlick@llnl.gov>

	* ChangeLog : Start over for 2.0 branch.  Old moved to ChangeLog-1.0.

	* etc/bashfun.dev : New.

2006-11-15 Albert Chu <chu11@llnl.gov>

	* : Added autoconf/automake support globally.

	* man/powermand.1 : Renamed to powermand.8.  Adjust text appropriately.

	* man/powerman.1.in, powerman.conf.5, powerman.dev.5: Adjust SEE
	ALSO section for change in section for powermand.

	* src/parse.lex (yywrap): Add function to remove need to link to -lfl.

	* powerman.spec.in: Add man8 directory.
